[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.mypy]
show_error_context = true
ignore_missing_imports = true

files = "."

exclude = [
    "setup.py",
    "docs.*",
    "docs.conf.*",
    "build",
    "venv"
]

# 'strict = true' is equivalent to the following:
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_calls = true
no_implicit_reexport = true
strict_equality = true

# The following need to have changes made to be able to enable them:
# disallow_any_generics = true
# no_implicit_optional = true
# warn_return_any = true

[[tool.mypy.overrides]] # Overrides for currently untyped modules
module = [
    "target.*",
    "target.file.*",
    "target.logger.*",
    "target.s3.*"
]

[[tool.mypy.overrides]] # Overrides for currently untyped modules
ignore_errors = true

module = [
    "tests.*"
]
