[metadata]
name = target-s3-jsonl
version = attr: target_s3_jsonl.__version__
description = Singer.io target for writing JSON Line files and upload to S3
long_description = file: README.md
long_description_content_type = text/markdown
author = Eddy ∆
author_email = edrdelta@gmail.com
url = https://github.com/ome9ax/target-s3-jsonl
keywords = target-core, target-s3-jsonl, target-s3-json, singer, singer.io, tap, target, etl, json, jsonl, aws, s3
license = Apache License 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
project_urls =
    # Documentation = https://ome9ax.github.io/target-s3-jsonl
    Releases = https://github.com/ome9ax/target-s3-jsonl/releases
    Changelog = https://github.com/ome9ax/target-s3-jsonl/blob/main/CHANGELOG.rst
    Issue Tracker = https://github.com/ome9ax/target-s3-jsonl/issues

[options]
package_dir =
    = src
packages = find:
py_modules = target_s3_jsonl
python_requires = >=3.9
# install_requires =
#     jsonschema==4.9.1
#     boto3==1.24.52
#     backoff==2.1.2
include_package_data = True
platforms = any

[options.package_data]
target_s3_jsonl = logging.conf

[options.entry_points]
console_scripts =
    target-s3-jsonl = target_s3_jsonl:main

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
test =
    pytest-asyncio
    pytest-cov
    moto[s3]
    # moto[s3,sts]
lint = flake8
static = mypy
dist =
    setuptools
    wheel
    build
deploy = twine
doc = sphinx-rtd-theme

[tool:pytest]
addopts = -v --cov=target_s3_jsonl --cov-fail-under 95 --cov-report xml --cov-report term --cov-report html:htmlcov --doctest-modules
testpaths = tests
asyncio_mode = auto

[coverage:run]
branch = True
omit =
    venv/*

[coverage:report]
show_missing = True
skip_covered = False

[flake8]
count = True
show-source = True
statistics = True
extend-exclude = venv
ignore = C901
max-line-length = 160
max-complexity = 10

[tox:tox]
passenv = TOXENV TOX_* CI_* GITLAB_*
# requires = tox-pipenv
envlist = py{39,310}
# labels =
#     test = py{39,310,pi}
#     static = flake8, mypy
# envlist = .virtualenvs/target-s3-jsonl
isolated_build = True
# skipsdist = True
# parallel_show_output=True

# requires = tox-pip-extensions
# tox_pip_extensions_ext_venv_update = true

[testenv]
usedevelop = True
extras = test
commands = pytest {posargs}

[testenv:lint]
usedevelop = True
skip_install = true
deps=flake8
commands=flake8 {posargs}

[testenv:static]
usedevelop = True
skip_install = true
deps = mypy
commands = mypy {posargs}

# [build-system]
# requires = [
#     "setuptools>=42",
#     "wheel"
# ]
# build-backend = "setuptools.build_meta"
